SAKIII-5760 fixed css background colour
Squashed commit of the following:

commit 44278c98d115342b355c9f0e4eb8ec982e496c10
Merge: 8e56e54 b20a5b9
Author: Christian Vuerings <vueringschristian@gmail.com>
Date:   Wed Jun 20 20:56:25 2012 -0700

    Merge remote-tracking branch 'jsloane/SAKIII-5760' into jsloane-SAKIII-5760

commit b20a5b9c106ba336ab35a3eba87c978bff465521
Author: jsloane <jsloane@csu.edu.au>
Date:   Wed Jun 20 09:27:05 2012 +1000

    SAKIII-5760 reversed topnav css change

commit 0625499ab80d11b418cb028ac2ca097e2638fa1d
Author: jsloane <jsloane@csu.edu.au>
Date:   Tue Jun 19 11:45:01 2012 +1000

    SAKIII-5760 fixed css background colour

--- a/dev/css/sakai/sakai.base.css
+++ b/dev/css/sakai/sakai.base.css
@@ -162,7 +162,7 @@ caption, .caption {
     width: 187px;
     min-height: 500px;
     border-top: solid #d6dadd 1px;
-    background: #f7f7f7;
+    background: #ffffff;
     background: -moz-linear-gradient(top, #f7f7f7 0%, #f7f7f7 5%, #ffffff 12%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(5%,#f7f7f7), color-stop(12%,#ffffff));
     background: -webkit-linear-gradient(top, #f7f7f7 0%,#f7f7f7 5%,#ffffff 12%);
